--- a/package.json
+++ b/package.json
@@ -7,14 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
-    "vue-template-compiler": "^2.6.11"
+    "babel-plugin-component": "^1.1.1",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "vue-lazyload": "^1.3.3",
+    "vue-template-compiler": "^2.6.11",
+    "vux-loader": "^1.2.9",
+    "webpack": "^4.23.0"
   }
 }
