--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.1",
     "element-ui": "^2.15.6",
     "vue": "^2.6.11",
     "vue-infinite-scroll": "^2.0.2",
@@ -16,6 +17,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
