--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "distpicker": "^2.0.7",
     "echarts": "^5.3.1",
     "element-ui": "^2.15.6",
+    "v-distpicker": "^1.2.12",
     "vue": "^2.6.11",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
