--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "core-js": "^3.6.5",
+    "distpicker": "^2.0.7",
+    "echarts": "^5.3.1",
     "element-ui": "^2.15.6",
-    "stylus-loader": "^6.2.0",
+    "jquery": "^3.6.0",
+    "v-distpicker": "^1.2.12",
     "vue": "^2.6.11",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
