--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "distpicker": "^2.0.7",
     "echarts": "^5.3.1",
     "element-ui": "^2.15.6",
+    "jquery": "^3.6.0",
     "less-loader": "^6.0.0",
     "v-distpicker": "^1.2.12",
     "vue": "^2.6.11",
