--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "distpicker": "^2.0.7",
     "echarts": "^5.3.1",
+    "el-table-infinite-scroll": "^1.0.10",
     "element-ui": "^2.15.6",
     "less-loader": "^6.0.0",
     "v-distpicker": "^1.2.12",
